--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
 sass:
   syntax: scss
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "pages"
+    values:
+      layout: "default"
